<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_height="match_parent"
              android:layout_width="match_parent"
              android:orientation="vertical">
    <TextView android:id="@+id/game_title"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_gravity="center_horizontal"/>
    <LinearLayout
            android:id="@+id/endgame_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"
            android:visibility="gone">
        <TextView
                android:id="@+id/endgame_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/end_of_game"
                android:gravity="center_horizontal"/>
        <Button
                android:id="@+id/find_another_game_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/find_another_game"
                android:gravity="center_horizontal"/>
    </LinearLayout>
    <RelativeLayout
                    android:id="@+id/board_layout"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
            <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/board"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"/>
    </RelativeLayout>
    <LinearLayout
            android:orientation="vertical" android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/loading_layout"
            android:visibility="gone">
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/finding_another_player"
                android:id="@+id/finding_another_player"/>
        <ProgressBar android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:id="@+id/finding_player_progressbar"
                     android:layout_gravity="center_horizontal"/>
    </LinearLayout>
</LinearLayout>

